# bff-cli

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Jenkinsfile  README.md  docker-compose.yaml  gunicorn_config.py  internal_requirements.txt  pyproject.toml  requirements.txt  run.py  starter.sh  test.py  test_config.py  trace.py
.github/workflows/: build-and-publish.yml  main.yml  trigger-jenkins.yml
app/: api_registry.py  auth.py  config.py  main.py  namespace.py  test.py
app/commons/data_providers/: data_models.py  database.py  redis.py
app/models/: base_models.py  dataset_models.py  entity_info_models.py  error_model.py  file_models.py  hpc_models.py  kg_models.py  lineage_models.py  manifest_models.py  models_data_download.py  project_models.py  validate_generate_id_models.py  validation_models.py
app/resources/: database_service.py  dependencies.py  error_handler.py  health_check.py  helpers.py  hpc.py  validation_service.py
app/routers/: api_root.py
kubernetes/: dev-deployment.yaml  staging-deployment.yaml  staging-deployment.ymal
tests/: conftest.py  helper.py  prepare_test.py  pytest.ini  test_attributes.py  test_dataset.py  test_file_list.py  test_hpc.py  test_kg_resource.py  test_project_check_folder_exist.py  test_project_files.py  test_project_list.py  test_query_file_geid.py  test_requirements.txt  test_validation_api.py
tests/logs/: test_projects.log.1  test_projects.log.2  test_projects.log.3  test_projects.log.4  test_projects.log.5
tests/resources/: test_dependencies.py  test_helpers.py  test_hpc.py
tests/routers/: test_api_root.py
(+31 files in other folders)
